fix some bug - overflow: auto;

--- a/src/Сomponents/GoodsCard/GoodsCard.module.scss
+++ b/src/Сomponents/GoodsCard/GoodsCard.module.scss
@@ -14,10 +14,10 @@ $lime-green: #4fa19d;
   display: flex;
   flex-direction: row;
   box-shadow: 0 5px 5px 1px $silver;
-  background: $white;
   text-align: center;
   border-radius: 10px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: auto;
   margin: 1em auto;
   min-height: 350px;
   max-width: 600px;
@@ -35,10 +35,19 @@ $lime-green: #4fa19d;
     }
   }
   .wrapBlock {
+    box-sizing: border-box;
     max-height: 100px;
-    overflow: auto;
+    overflow-y: auto;
     order: 0;
     margin-bottom: 10px;
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: $soft-blue;
+      border-radius: 16px;
+      box-shadow: inset 2px 2px 2px hsl(0deg 0% 100% / 25%), inset -2px -2px 2px rgb(0 0 0 / 25%);
+    }
   }
   .checkbox {
     display: none;
@@ -105,8 +114,7 @@ $lime-green: #4fa19d;
       margin: 0 10px 0 10px;
       color: $dark-salt;
       font-size: 18px;
-      width: 95%;
-      overflow: auto;
+      width: 90%;
       height: 250px;
     }
     .more {
@@ -135,18 +143,13 @@ $lime-green: #4fa19d;
     transition: all 0.5s ease-out;
     display: inline-block;
     position: relative;
-    overflow: auto;
     height: 100%;
     float: right;
     width: 50%;
     img {
       width: 100%;
       height: 100%;
-      transition: all 0.5s ease-out;
       cursor: pointer;
-      &:hover {
-        transform: scale(1.5, 1.5);
-      }
     }
     &::after {
       content: "";
