--- a/src/Сomponents/MasterCard/MasterCard.module.scss
+++ b/src/Сomponents/MasterCard/MasterCard.module.scss
@@ -25,7 +25,7 @@ $bright-orange: #edae3b;
       width: 300px;
       border-radius: 10px;
       transition: background 0.8s;
-      overflow: auto;
+      overflow: hidden;
       box-shadow: 0 70px 63px -60px $very-dark-blue;
       display: flex;
       justify-content: center;
